auto-commit for 7e8732b4-6bf3-4210-85ee-9fa054c1f612